Mobile text overflow fix

--- a/frontend/src/styles/testimony.scss
+++ b/frontend/src/styles/testimony.scss
@@ -299,6 +299,10 @@ nav {
     @media all and (max-width: 600px) {
       height: 120px;
     }
+
+    @media all and (max-width: 390px) {
+      height: 140px;
+    }
     &.grey {
       color: #c3c3c3;
     }
